# DockDineStay

./: README.md  main.py  start_backend.sh  start_dev.sh  start_frontend.sh
assets/: .gitkeep
backend/: environment.yml  main.py  pyproject.toml  requirements.txt
backend/src/dockdinestay/auth/: auth_bearer.py  auth_handler.py  auth_utils.py  token.py
backend/src/dockdinestay/configs/: __init__.py
backend/src/dockdinestay/db/: __init__.py  boat_booking_crud.py  boat_crud.py  cafeteria_order_crud.py  cafeteria_order_item_crud.py  cafeteria_table_crud.py  db_model.py  hotel_booking.py  hotel_room.py  models.py  users.py  utils.py
backend/src/dockdinestay/routers/: auth.py  boat_bookings.py  boats.py  cafeteria_menu.py  cafeteria_orders.py  cafeteria_tables.py  dependencies.py  hotel_bookings.py  hotel_rooms.py  users.py
frontend/: package-lock.json  package.json
frontend/dockDineStay/: package-lock.json  package.json  vite.config.ts
frontend/dockDineStay/src/: App.css  App.tsx  index.css  main.tsx  types.ts
frontend/dockDineStay/src/api/: envLoader.ts  index.ts
frontend/dockDineStay/src/components/: Footer.module.css  Footer.tsx  LoadingSpinner.module.css  LoadingSpinner.tsx  Modal.module.css  Modal.tsx  ProtectedRoute.tsx
frontend/dockDineStay/src/context/: AuthContext.tsx
frontend/dockDineStay/src/pages/: AdminHotelRoomsPage.module.css  AdminHotelRoomsPage.tsx  DashboardPage.tsx  LoginPage.tsx  ManageUsersPage.tsx  ProfilePage.module.css  ProfilePage.tsx
