[project]
name = "dockdinestay"
version = "0.1.0"
description = "All-in-One Hospitality Services Management System * A Cafeteria * Hotel stay and banquet services * Boating services Tech Stack * Frontend: React + TypeScript * Backend: Python (FastAPI / Flask) * Database: MongoDB  * Auth &amp; Security: JWT-based login system with role-based access control"
authors = [
    { name = "Sunny Raj", email = "mail.sunnyraj94@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"

dependencies = [
    'annotated-types==0.7.0',
    'anyio==4.9.0',
    'cffi==1.17.1',
    'click==8.2.1',
    'cryptography==45.0.5',
    'dnspython==2.7.0',
    'ecdsa==0.19.1',
    'email_validator==2.2.0',
    'fastapi==0.115.14',
    'h11==0.16.0',
    'idna==3.10',
    'passlib==1.7.4',
    'pyasn1==0.6.1',
    'pycparser==2.22',
    'pydantic==2.11.7',
    'pydantic_core==2.33.2',
    'pymongo==4.13.2',
    'python-dotenv==1.1.1',
    'python-jose==3.5.0',
    'rsa==4.9.1',
    'setuptools==78.1.1',
    'six==1.17.0',
    'sniffio==1.3.1',
    'starlette==0.46.2',
    'typing-inspection==0.4.1',
    'typing_extensions==4.14.0',
    'uvicorn==0.35.0',
    'wheel==0.45.1',
    'gunicorn==23.0.0',
    ]

[tool.setuptools.packages.find]
where = ["src"]
include = [
    "dockdinestay*",
]
exclude = [
    "data*",
    "assets*",
    "notebooks*",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"